// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback "bag" argument has all goodies: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`callback "bag" argument has all goodies: 1 - history_index 1`] = `1`;

exports[`callback "bag" argument has all goodies: 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`callback "bag" argument has all goodies: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`callback "bag" argument has all goodies: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`callback "bag" argument has all goodies: 1 - routes - SECOND - beforeEnter 1`] = `1`;

exports[`callback "bag" argument has all goodies: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`callback "bag" argument has all goodies: 1 - title 1`] = `"SECOND"`;

exports[`callback "bag" argument has all goodies: bag 1`] = `
Object {
  "_dispatched": false,
  "action": Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
      ],
      "from": null,
      "index": 1,
      "kind": "push",
      "length": 2,
      "pathname": "/second",
      "prev": Object {
        "basename": "",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
        ],
        "hash": "",
        "index": 0,
        "kind": "load",
        "length": 1,
        "params": Object {},
        "pathname": "/first",
        "query": Object {},
        "scene": "",
        "search": "",
        "state": Object {},
        "status": 200,
        "type": "FIRST",
        "url": "/first",
      },
      "scene": "",
      "search": "",
      "status": 200,
      "url": "/second",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "SECOND",
  },
  "arg": "extra-arg",
  "cache": Object {
    "cacheAction": [Function],
    "clear": [Function],
    "isCached": [Function],
  },
  "commitDispatch": [Function],
  "commitHistory": [Function],
  "completed": false,
  "confirm": [Function],
  "ctx": Object {
    "busy": true,
  },
  "dispatch": [Function],
  "error": null,
  "getLocation": [Function],
  "getState": [Function],
  "getTitle": [Function],
  "hash": "",
  "history": MemoryHistory {
    "_forceRefresh": false,
    "_listener": [Function],
    "basename": "",
    "basenames": Array [],
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "firstRoute": Object {
      "commit": [Function],
      "nextHistory": Object {
        "basename": "",
        "basenames": Array [],
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
        ],
        "index": 0,
        "kind": "load",
        "length": 1,
        "location": Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        "saveHistory": [Function],
        "type": "@@rudy/UPDATE_HISTORY",
      },
      "type": "@@rudy/UPDATE_HISTORY",
    },
    "index": 0,
    "kind": "load",
    "length": 1,
    "location": Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
    "saveHistory": [Function],
  },
  "initialLocation": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "initialState": Object {
    "location": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "from": null,
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "prev": Object {
        "basename": "",
        "entries": Array [],
        "hash": "",
        "index": -1,
        "kind": "",
        "length": 0,
        "params": Object {},
        "pathname": "",
        "query": Object {},
        "scene": "",
        "search": "",
        "state": Object {},
        "type": "",
        "url": "",
      },
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "title": "FIRST",
  },
  "options": Object {
    "callbacks": Array [
      "thunk",
      "onComplete",
      "beforeLeave",
      "beforeEnter",
      "onLeave",
      "onEnter",
      "thunk",
      "onComplete",
      "onError",
    ],
    "createRequest": [Function],
    "extra": Object {
      "arg": "extra-arg",
    },
    "initialEntries": Array [
      "/first",
    ],
    "onError": [Function],
    "shouldCall": [Function],
    "shouldTransition": [Function],
  },
  "params": Object {},
  "prevRoute": Object {
    "path": "/first",
    "type": "FIRST",
  },
  "query": Object {},
  "route": Object {
    "beforeEnter": [MockFunction] {
      "calls": Array [
        Array [
          [Circular],
        ],
      ],
    },
    "path": "/second",
    "type": "SECOND",
  },
  "routes": Object {
    "@@rudy/ADD_ROUTES": Object {
      "thunk": [Function],
      "type": "@@rudy/ADD_ROUTES",
    },
    "@@rudy/CALL_HISTORY": Object {
      "thunk": [Function],
      "type": "@@rudy/CALL_HISTORY",
    },
    "@@rudy/NOT_FOUND": Object {
      "path": "/not-found",
      "type": "@@rudy/NOT_FOUND",
    },
    "FIRST": Object {
      "path": "/first",
      "type": "FIRST",
    },
    "NEVER_USED_PATHLESS": Object {
      "thunk": [MockFunction],
      "type": "NEVER_USED_PATHLESS",
    },
    "REDIRECTED": Object {
      "onComplete": [MockFunction],
      "path": "/redirected",
      "type": "REDIRECTED",
    },
    "SECOND": Object {
      "beforeEnter": [MockFunction] {
        "calls": Array [
          Array [
            [Circular],
          ],
        ],
      },
      "path": "/second",
      "type": "SECOND",
    },
  },
  "state": Object {},
  "store": Object {
    "dispatch": [Function],
    "getState": [Function],
  },
  "tmp": Object {
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "from": null,
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "prev": Object {
          "basename": "",
          "entries": Array [
            Object {
              "basename": "",
              "hash": "",
              "key": "345678",
              "pathname": "/first",
              "search": "",
              "state": Object {},
              "url": "/first",
            },
          ],
          "hash": "",
          "index": 0,
          "kind": "load",
          "length": 1,
          "params": Object {},
          "pathname": "/first",
          "query": Object {},
          "scene": "",
          "search": "",
          "state": Object {},
          "status": 200,
          "type": "FIRST",
          "url": "/first",
        },
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
  },
  "type": "SECOND",
}
`;
